# 3D-Point-Cloud-Viewer

./: .gitignore  CMakeLists.txt  PERFORMANCE_RESULTS.md  README.md  test_octree_timing.cpp
benchmarks/: CMakeLists.txt  benchmark_rendering.cpp
benchmarks/scripts/: generate_test_data.py  run_performance_test.sh
shaders/: point.frag  point.vert
src/: main.cpp
src/core/: MemoryPool.cpp  MemoryPool.h  Octree.cpp  Octree.h  PointCloud.cpp  PointCloud.h
src/processing/: Filters.cpp  Filters.h  OutlierRemoval.cpp  OutlierRemoval.h  VoxelDownsampling.cpp  VoxelDownsampling.h
src/rendering/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/utils/: FileIO.cpp  FileIO.h  Timer.h
tests/: CMakeLists.txt  test_filters.cpp  test_memory_pool.cpp  test_octree.cpp
